<resources>
    <string name="app_name">QuizApp</string>


    <!-- True [ CHAR LIMIT=NONE]-->
    <string name="True">True</string>

    <!-- True [ CHAR LIMIT=NONE]-->
    <string name="False">False</string>


    <string name="Heading">Fraction Quiz!!!!</string>

    <string name="EditTextHint">Enter Name</string>
    <string name="EditTextLabel">Student:</string>


    <!-- Question 1[ CHAR LIMIT=NONE]-->
    <string name="Q1">Q1. 1/2 + 1/3</string>

    <!-- Question 1 option 1[ CHAR LIMIT=NONE]-->
    <string name="Q1option1">2/5</string>
    <!-- Question 1 option 2[ CHAR LIMIT=NONE]-->
    <string name="Q1option2">1/6</string>
    <!-- Question 1 option 3[ CHAR LIMIT=NONE]-->
    <string name="Q1option3">5/6</string>
    <!-- Question 1 option 4[ CHAR LIMIT=NONE]-->
    <string name="Q1option4">1/5</string>

    <!-- Question 2[ CHAR LIMIT=NONE]-->
    <string name="Q2">Q2. 1/2 + 1/5</string>

    <!-- Question 2 option 1[ CHAR LIMIT=NONE]-->
    <string name="Q2option1">7/10</string>
    <!-- Question 2 option 2[ CHAR LIMIT=NONE]-->
    <string name="Q2option2">2/7</string>
    <!-- Question 2 option 3[ CHAR LIMIT=NONE]-->
    <string name="Q2option3">14/20</string>
    <!-- Question 2 option 4[ CHAR LIMIT=NONE]-->
    <string name="Q2option4">4/14</string>


    <!-- Question 3[ CHAR LIMIT=NONE]-->
    <string name="Q3">Q3. 2/3 > 1/3 </string>


    <!-- Question 4[ CHAR LIMIT=NONE]-->
    <string name="Q4">Q4. 1/2 > 1/3 </string>


    <!-- Question 5[ CHAR LIMIT=NONE]-->
    <string name="Q5">Q5. 1/2 == 7/14 </string>


    <!-- Question 5[ CHAR LIMIT=NONE]-->
    <string name="SubmitAnswer">Submit Answers</string>


</resources>
