<?xml version="1.0" encoding="utf-8"?>



<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.QuizAppWillie.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/BlueGrey"
        android:orientation="vertical">

        <TextView
            android:text="@string/Heading"
            style="@style/HeaderTextStyle"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/fraction"
            android:scaleType="center"/>

        <LinearLayout
            style="@style/CheckBoxCollection"
            android:orientation="horizontal">
            <TextView
                android:text="@string/EditTextLabel"
                style="@style/EditTextLabel"/>

            <EditText
                android:id="@+id/studentName"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/EditTextHint"
                android:inputType="textCapWords" />

        </LinearLayout>


        <TextView
            android:text="@string/Q1"
            style="@style/Question"/>

        <LinearLayout
            style="@style/CheckBoxCollection"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/Q1_option1"
                style="@style/CheckBoxOption"
                android:text="@string/Q1option1"/>
            <CheckBox
                android:id="@+id/Q1_option2"
                style="@style/CheckBoxOption"
                android:text="@string/Q1option2"/>

            <CheckBox
                android:id="@+id/Q1_option3"
                style="@style/CheckBoxOption"
                android:text="@string/Q1option3"/>
            <CheckBox
                android:id="@+id/Q1_option4"
                style="@style/CheckBoxOption"
                android:text="@string/Q1option4"/>

        </LinearLayout>

        <TextView
            android:text="@string/Q2"
            style="@style/Question"/>

        <LinearLayout
            style="@style/CheckBoxCollection"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/Q2_option1"
                style="@style/CheckBoxOption"
                android:text="@string/Q2option1"/>

            <CheckBox
                android:id="@+id/Q2_option2"
                style="@style/CheckBoxOption"
                android:text="@string/Q2option2"/>

            <CheckBox
                android:id="@+id/Q2_option3"
                style="@style/CheckBoxOption"
                android:text="@string/Q2option3"/>
            <CheckBox
                android:id="@+id/Q2_option4"
                style="@style/CheckBoxOption"
                android:text="@string/Q2option4"/>

        </LinearLayout>


        <TextView
            android:text="@string/Q3"
            style="@style/Question"/>

        <RadioGroup
            style="@style/CheckBoxCollection">

            <RadioButton
                android:id="@+id/Q3_option1"
                style="@style/RadioBoxOption"
                android:text="@string/True"/>

            <RadioButton
                android:id="@+id/Q3_option2"
                style="@style/RadioBoxOption"
                android:text="@string/False"/>

        </RadioGroup>


        <TextView
            android:text="@string/Q4"
            style="@style/Question"/>

        <RadioGroup
            style="@style/CheckBoxCollection">

            <RadioButton
                android:id="@+id/Q4_option1"
                style="@style/RadioBoxOption"
                android:text="@string/True"/>

            <RadioButton
                android:id="@+id/Q4_option2"
                style="@style/RadioBoxOption"
                android:text="@string/False"/>

        </RadioGroup>


        <TextView
            android:text="@string/Q5"
            style="@style/Question"/>

        <RadioGroup
            style="@style/CheckBoxCollection">

            <RadioButton
                android:id="@+id/Q5_option1"
                style="@style/RadioBoxOption"
                android:text="@string/True"/>

            <RadioButton
                android:id="@+id/Q5_option2"
                style="@style/RadioBoxOption"
                android:text="@string/False"/>

        </RadioGroup>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SubmitAnswer"
            android:layout_margin="8dp"
            android:onClick="submitAnswers"/>

    </LinearLayout>

</ScrollView>



